<?xml version="1.0" encoding="utf-8"?>
<com.gturedi.views.StatefulLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stateful_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".controller.fragment.CartFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/bill_summary"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:fontFamily="@font/font_regular"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/quantity"
                            android:textColor="@color/text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:fontFamily="@font/font_regular"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/total"
                            android:textColor="@color/text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="2.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/shape_white"
                            android:fontFamily="@font/font_regular"
                            android:gravity="center"
                            android:lines="1"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textColor="@color/textSecondary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:background="@drawable/shape_white"
                            android:fontFamily="@font/font_regular"
                            android:gravity="center"
                            android:lines="1"
                            android:paddingHorizontal="10dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textColor="@color/textSecondary"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font_regular"
                android:paddingBottom="5dp"
                android:text="@string/payment_method"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:checked="true"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/when_recieving"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/credit_card"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/jawwal_pay"
                    android:textColor="@color/text" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font_regular"
                android:paddingBottom="5dp"
                android:text="@string/delivery_method"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:checked="true"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/delivery"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/font_regular"
                    android:paddingBottom="5dp"
                    android:text="@string/receipt"
                    android:textColor="@color/text" />

            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_accent"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/send_order"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/progressBar"
                    style="@style/SpinKitView.FadingCircle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:translationZ="90dp"
                    android:visibility="invisible"
                    app:SpinKit_Color="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</com.gturedi.views.StatefulLayout>