<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".controller.activities.MealDetailActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_app_bar_back" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:src="@drawable/bistro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <View
                    android:id="@+id/view"
                    android:layout_width="3dp"
                    android:layout_height="40dp"
                    android:background="@color/red" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/font_bold"
                    android:gravity="start|center_vertical"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/ingredients"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_regular"
                android:textAllCaps="false"
                android:textColor="@color/text"
                tools:text="مكونات الوجبة" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:fontFamily="@font/font_bold"-->
<!--                android:text="@string/prepare"-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/text"-->
<!--                android:textSize="18sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/prepare"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:fontFamily="@font/font_regular"-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/text"-->
<!--                tools:text="طريقة التحضير" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/time"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_regular"
                android:textAllCaps="false"
                android:textColor="@color/stfImageColor"
                tools:text="وقت تحضير الوجبة" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/rate_meal"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/shape_accent"
                android:drawableTop="@drawable/ic_cart"
                android:drawableTint="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:paddingVertical="10dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>