<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/shape_success"
        android:padding="5dp"
        android:src="@drawable/ic_success"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:textColor="@color/text"
                tools:text="12:30 AM, 2020, Sep 11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:text="@string/order_number"
                        android:textColor="@color/text"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/tv_orderNumber"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:textColor="@color/textSecondary"
                        tools:text="#OTB0005" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textColor="@color/text"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/textSecondary"
                        tools:text="$262.35" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:text="@string/order_status"
                        android:textColor="@color/text"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/tv_stats"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/font_regular"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="@color/textSecondary"
                        tools:text="تمت بنجاح" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_showOrder"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/shape_accent"
                android:fontFamily="@font/font_regular"
                android:paddingHorizontal="10dp"
                android:paddingBottom="5dp"
                android:text="@string/show_order"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>